class selection practice, added bold font to two name and added a paragraph

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <h1>My Family names</h1>
     <ul>
       <li>Raylan</li>
-      <li>Julia</li>
-      <li>Sarai</li>
+      <li class="bold">Julia</li>
+      <li class="bold">Sarai</li>
       <li>Ezra</li>
     </ul>
+    <p class="bold">Ezra is 9 years old and Sarai is 3</p>
   </body>
 </html>
