added a black bacground and center the title heading

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <link rel="stylesheet" href="./css/styles.css" />
-    <h1>My Family names</h1>
+    <h1 class="center">My Family names</h1>
     <ul>
       <li>Raylan</li>
       <li class="bold">Julia</li>
